# aut

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish-docker-image.yml
src/: config.rs  form.rs  main.rs  model.rs  route.rs  template.rs
templates/: base.html  edit_user.html  list_users.html
